--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+  
+  testing for compare and pull 
+
+
 Merge branch 'example' of https://github.com/SakshiBheda/web_2 into example
 # Please enter a commit message to explain why this merge is necessary,
 # especially if it merges an updated upstream into a topic branch.
